Whitespace fixes

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -29,7 +29,7 @@ $govuk-assets-path: '/govuk/assets/';
 
 // Document icon image
 .moj-timeline__document-link {
-    background-image: url(/public/images/icon-document.svg) !important;
+  background-image: url(/public/images/icon-document.svg) !important;
 }
 
 .app-cases-table td ol {
@@ -91,63 +91,58 @@ $govuk-assets-path: '/govuk/assets/';
 }
 
 .app-case-updates {
-    margin-bottom: 25px;
-}
-
-.app-organisation-nav-title {
-    float: right;
-    padding-top: 19px;
+  margin-bottom: 25px;
 }
 
 @media (min-width: 1100px) {
-    .app-case-updates {
-        float: right;
-        margin-bottom: 0;
-        margin-top: 15px;
-    }
+  .app-case-updates {
+    float: right;
+    margin-bottom: 0;
+    margin-top: 15px;
+  }
 }
 
 .govuk-panel--appointment {
-        color: #ffffff;
-        background: #28a197;
-        margin-bottom: 2rem;
-    }
+  color: #ffffff;
+  background: #28a197;
+  margin-bottom: 2rem;
+}
 
 .govuk-panel--appointment-none {
-        color: #0b0c0c;
-        background: #f3f2f1;
-        margin-bottom: 2rem;
-    }
+  color: #0b0c0c;
+  background: #f3f2f1;
+  margin-bottom: 2rem;
+}
 
 .govuk-panel--appointment-timeline {
-        color: #ffffff;
-        background: #1d70b8;
-        margin-bottom: 2rem;
-        padding: 20px;
-    }
+  color: #ffffff;
+  background: #1d70b8;
+  margin-bottom: 2rem;
+  padding: 20px;
+}
 
 .govuk-panel__title {
-    font-size: 27px;
+  font-size: 27px;
+  line-height: 1;
+}
+
+@media (min-width: 40.0625em) {
+  .govuk-panel__title {
+    font-size: 36px;
     line-height: 1;
+  }
+}
+
+.govuk-panel__body {
+  font-size: 19px;
+  line-height: 1.3;
 }
 
 @media (min-width: 40.0625em) {
-    .govuk-panel__title {
-        font-size: 36px;
-        line-height: 1;
-        }
-    }
-
-.govuk-panel__body {
-    font-size: 19px;
-    line-height: 1.3;
-}
-
-@media (min-width: 40.0625em) {
-.govuk-panel__body {
-  font-size: 24px;
-  line-height: 1.4;
-    }
+  .govuk-panel__body {
+    font-size: 24px;
+    line-height: 1.4;
+  }
 }
 
 .govuk-panel__small {
